--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Color Background</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Random Background Color</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Random Color Background</h1>
-    </div>
-    <script src="script.js"></script>
+    <script>
+        function getRandomColor() {
+            const letters = '0123456789ABCDEF';
+            let color = '#';
+            for (let i = 0; i < 6; i++) {
+                color += letters[Math.floor(Math.random() * 16)];
+            }
+            return color;
+        }
+
+        function changeBackgroundColor() {
+            document.body.style.backgroundColor = getRandomColor();
+        }
+
+        setInterval(changeBackgroundColor, 1000);
+    </script>
 </body>
 </html>
