--- a/index.html
+++ b/index.html
@@ -3,20 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Background Color with Potato</title>
+    <title>Dynamic Background with Mouse Follower</title>
     <style>
-        #potato {
+        #follower {
             position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            pointer-events: none;
+        }
+
+        .particle {
+            position: absolute;
+            background-color: red;
+            border-radius: 50%;
+            pointer-events: none;
         }
     </style>
 </head>
 <body>
-    <img id="potato" src="potato.jpg" alt="Potato Image" />
+    <img id="follower" src="potato.png" alt="Follower Image" />
 
     <script>
+        const follower = document.getElementById('follower');
+
+        document.addEventListener('mousemove', function (e) {
+            follower.style.left = e.pageX + 'px';
+            follower.style.top = e.pageY + 'px';
+            createParticle(e.pageX, e.pageY);
+        });
+
+        function createParticle(x, y) {
+            const particle = document.createElement('div');
+            particle.className = 'particle';
+            particle.style.left = `${x}px`;
+            particle.style.top = `${y}px`;
+            document.body.appendChild(particle);
+
+            setTimeout(() => {
+                particle.style.transform = 'scale(0)';
+                setTimeout(() => {
+                    document.body.removeChild(particle);
+                }, 500);
+            }, 100);
+        }
+
         function getRandomColor() {
             const letters = '0123456789ABCDEF';
             let color = '#';
@@ -26,11 +54,9 @@
             return color;
         }
 
-        function changeBackgroundColor() {
+        setInterval(() => {
             document.body.style.backgroundColor = getRandomColor();
-        }
-
-        setInterval(changeBackgroundColor, 1000);
+        }, 1000);
     </script>
 </body>
 </html>
