--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Background with Mouse Follower</title>
+    <title>Particle Stream with Dynamic Background</title>
     <style>
         #follower {
             position: absolute;
@@ -12,9 +12,13 @@
 
         .particle {
             position: absolute;
+            width: 5px;
+            height: 5px;
             background-color: red;
             border-radius: 50%;
             pointer-events: none;
+            opacity: 1;
+            transition: opacity 0.5s linear;
         }
     </style>
 </head>
@@ -33,16 +37,17 @@
         function createParticle(x, y) {
             const particle = document.createElement('div');
             particle.className = 'particle';
-            particle.style.left = `${x}px`;
-            particle.style.top = `${y}px`;
+            particle.style.left = `${x - 5}px`;
+            particle.style.top = `${y - 5}px`;
             document.body.appendChild(particle);
 
             setTimeout(() => {
-                particle.style.transform = 'scale(0)';
-                setTimeout(() => {
-                    document.body.removeChild(particle);
-                }, 500);
-            }, 100);
+                particle.style.opacity = 0;
+            }, 50);
+
+            setTimeout(() => {
+                document.body.removeChild(particle);
+            }, 1000);
         }
 
         function getRandomColor() {
